[coverage:run]
omit =
    pyls/tests/matlab.py
    pyls/_version.py

[flake8]
doctests = True
exclude = *build/
ignore = E402, W503
max-line-length = 79

[metadata]
description-file = README.md

[versioneer]
VCS = git
style = pep440
versionfile_source = pyls/_version.py
versionfile_build = pyls/_version.py
tag_prefix =
parentdir_prefix =
