[metadata]
name = pyls
url = https://github.com/rmarkello/pyls
download_url = https://github.com/rmarkello/pyls
author = pyls developers
maintainer = Ross Markello
maintainer_email = rossmarkello@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
license = BSD-3
description = A toolbox for performing multivariate PLS decomposition analyses
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
platforms = OS Independent
provides =
    pyls

[options]
python_requires = >=3.5.1
install_requires =
    h5py
    numpy
    scikit-learn
    scipy
    tqdm
tests_require =
    pytest >=3.6
test_suite = pytest
zip_safe = False
packages = find:
include_package_data = True

[options.extras_require]
doc =
    sphinx >=2.0
    sphinx-argparse
    sphinx_rtd_theme
plotting =
    pandas
    seaborn
style =
    flake8
test =
    pytest-cov
all =
    %(doc)s
    %(plotting)s
    %(style)s
    %(test)s

[options.package_data]
pyls =
    data/*
    pyls/examples/*json
    pyls/tests/data/*

[coverage:run]
omit =
    */pyls/tests/matlab.py
    */pyls/_version.py

[flake8]
doctests = True
exclude =
    *build/*
    *sphinx*
    */__init__.py
ignore = E402, W503
max-line-length = 79

[tool:pytest]
doctest_optionflags = NORMALIZE_WHITESPACE
xfail_strict = true
addopts = -rx

[versioneer]
VCS = git
style = pep440
versionfile_source = pyls/_version.py
versionfile_build = pyls/_version.py
tag_prefix =
parentdir_prefix =
